[gd_scene load_steps=14 format=4 uid="uid://bkgh7uaqrjamv"]

[ext_resource type="Texture2D" uid="uid://dakqmss3aovat" path="res://graphics/environment/seaplant.png" id="1_3fmlf"]
[ext_resource type="TileSet" uid="uid://b7l7ni8f711eg" path="res://levels/generation/tiles.tres" id="1_botvl"]
[ext_resource type="Texture2D" uid="uid://6i1had7ijot8" path="res://graphics/environment/seaplant_smol.png" id="2_khne5"]
[ext_resource type="Script" uid="uid://jfyby71sefyu" path="res://utilities/trigger_hurt.gd" id="2_xik0a"]
[ext_resource type="Texture2D" uid="uid://cvdlehc4d6sww" path="res://levels/tileset1.png" id="3_aafx2"]
[ext_resource type="Texture2D" uid="uid://pwlgmx4fbet2" path="res://graphics/environment/jokukivijuttu4.png" id="3_ph4vs"]
[ext_resource type="Texture2D" uid="uid://ekf074r753ji" path="res://graphics/environment/Simp-ukka.png" id="4_ct6qy"]
[ext_resource type="Texture2D" uid="uid://xxpy3rhcatxa" path="res://graphics/environment/koralli_large.png" id="5_ehxmt"]
[ext_resource type="Texture2D" uid="uid://da7keoysrnmko" path="res://graphics/environment/vittukoralli.png" id="6_724kj"]
[ext_resource type="Texture2D" uid="uid://q2a4erpcxxt4" path="res://graphics/environment/tottero.png" id="7_p4qms"]
[ext_resource type="Texture2D" uid="uid://56cynunhvasm" path="res://graphics/environment/merisuolakurkku.png" id="11_6yij1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_soyje"]
size = Vector2(384, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aafx2"]
size = Vector2(76.5836, 28.8914)

[node name="LevelPart" type="Node2D"]

[node name="visualflair" type="Node2D" parent="."]

[node name="Seaplant" type="Sprite2D" parent="visualflair"]
position = Vector2(97, -233)
texture = ExtResource("1_3fmlf")

[node name="SeaplantSmol" type="Sprite2D" parent="visualflair"]
position = Vector2(71, -205)
texture = ExtResource("2_khne5")

[node name="Jokukivijuttu4" type="Sprite2D" parent="visualflair"]
position = Vector2(115, -232)
rotation = -3.14159
scale = Vector2(1, -1)
texture = ExtResource("3_ph4vs")

[node name="Simp-ukka" type="Sprite2D" parent="visualflair"]
position = Vector2(36, -182)
rotation = 0.558505
texture = ExtResource("4_ct6qy")

[node name="KoralliLarge" type="Sprite2D" parent="visualflair"]
position = Vector2(10, -181)
texture = ExtResource("5_ehxmt")

[node name="Vittukoralli" type="Sprite2D" parent="visualflair/KoralliLarge"]
position = Vector2(177, -32)
texture = ExtResource("6_724kj")

[node name="Tottero" type="Sprite2D" parent="visualflair/KoralliLarge"]
position = Vector2(200, -4)
rotation = 0.401426
texture = ExtResource("7_p4qms")

[node name="Bounds" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="Shape" type="CollisionShape2D" parent="Bounds"]
position = Vector2(0, -48)
shape = SubResource("RectangleShape2D_soyje")
debug_color = Color(1, 1, 1, 0.0392157)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD1/wAAAAAHAAIAAAD2/wAAAAAHAAIAAAD3/wAAAAAHAAIAAAD4/wAAAAAHAAIAAAD5/wAAAAAHAAIAAAD6/wAAAAAHAAIAAAD7/wAAAAAHAAIAAAD8/wAAAAAHAAIAAAD//wAAAAAHAAIAAAAAAAAAAAAHAAIAAAADAAAAAAAHAAIAAAAEAAAAAAAHAAIAAAAFAAAAAAAHAAIAAAAGAAAAAAAHAAIAAAAHAAAAAAAHAAIAAAAIAAAAAAAHAAIAAAAJAAAAAAAHAAIAAAAKAAAAAAAHAAQAAAAKAP//AAAHAAQAAAAJAP//AAAHAAIAAAAIAP//AAAHAAIAAAAHAP//AAAHAAIAAQAGAP//AAAFAAMAAAAFAP//AAAFAAMAAAAAAP//AAAHAAIAAQD/////AAAGAAMAAAD8////AAAHAAIAAgD7////AAAHAAIAAAD6////AAAHAAIAAAD5////AAAHAAIAAAD4////AAAGAAMAAAD3////AAAGAAMAAAD2////AAAGAAMAAAD1////AAAFAAMAAAD9////AAAGAAMAAAD9/wAAAAAHAAIAAAD+/wAAAAAHAAIAAAD+////AAAGAAMAAAABAP//AAAHAAIAAAABAAAAAAAHAAIAAAACAAAAAAAHAAIAAAACAP//AAAHAAIAAAD0/wAAAAAHAAIAAADz/wAAAAAHAAIAAADy/wAAAAAHAAIAAADy////AAAGAAMAAADz////AAAGAAMAAAD0////AAAGAAMAAAAKAP7/AAAHAAQAAAAJAP7/AAAHAAIAAAAIAP7/AAAHAAIAAQAKAP3/AAAHAAMAAAAJAP3/AAAFAAMAAAAIAP3/AAAEAAMAAAD6//7/AAAHAAIAAAD6//3/AAAHAAIAAAD6//z/AAAHAAIAAAD7//z/AAAHAAIAAAD7//3/AAAHAAIAAAD7//7/AAAHAAIAAAD5//z/AAAEAAQAAAD5//3/AAAEAAQAAAD5//7/AAAEAAQAAAD8//z/AAAHAAQAAAD8//3/AAAHAAQAAQD8//7/AAAHAAQAAQDx////AAAEAAMAAADx/wAAAAAEAAQAAADx/wEAAAAEAAQAAADy/wEAAAAHAAIAAADz/wEAAAAHAAIAAAD1/wEAAAAHAAIAAAD0/wEAAAAHAAIAAAD2/wEAAAAHAAIAAAD4/wEAAAAHAAIAAAD3/wEAAAAHAAIAAAD5/wEAAAAHAAIAAAD6/wEAAAAHAAIAAAD7/wEAAAAHAAIAAAD8/wEAAAAHAAIAAAD+/wEAAAAHAAIAAAD9/wEAAAAHAAIAAAD//wEAAAAHAAIAAAAAAAEAAAAHAAIAAAABAAEAAAAHAAIAAAACAAEAAAAHAAIAAAADAAEAAAAHAAIAAAAEAAEAAAAHAAIAAAAFAAEAAAAHAAIAAAAGAAEAAAAHAAIAAAAHAAEAAAAHAAIAAAAIAAEAAAAHAAIAAAAJAAEAAAAHAAIAAAAKAAEAAAAHAAQAAADx/wIAAAAEAAQAAADy/wIAAAAFAAQAAADz/wIAAAAGAAQAAAD0/wIAAAAGAAQAAAD1/wIAAAAFAAQAAAD2/wIAAAAGAAQAAAD3/wIAAAAFAAQAAAD4/wIAAAAFAAQAAAD5/wIAAAAFAAQAAAD6/wIAAAAFAAQAAAD7/wIAAAAGAAQAAAD8/wIAAAAGAAQAAAD9/wIAAAAFAAQAAAD+/wIAAAAFAAQAAAD//wIAAAAFAAQAAAAAAAIAAAAFAAQAAAABAAIAAAAGAAQAAAACAAIAAAAFAAQAAAADAAIAAAAGAAQAAAAEAAIAAAAFAAQAAAAFAAIAAAAFAAQAAAAGAAIAAAAFAAQAAAAHAAIAAAAGAAQAAAAIAAIAAAAFAAQAAAAJAAIAAAAFAAQAAAAKAAIAAAAHAAQAAAD2//b/AAAEAAQAAAD2//f/AAAEAAQAAAD3//b/AAAHAAIAAAD3//f/AAAFAAQAAAD4//b/AAAHAAIAAAD4//f/AAAFAAQAAAD5//b/AAAHAAIAAAD5//f/AAAFAAQAAAD6//b/AAAHAAIAAAD6//f/AAAFAAQAAAD7//b/AAAHAAIAAAD7//f/AAAFAAQAAAD8//b/AAAHAAIAAAD8//f/AAAGAAQAAAD9//b/AAAHAAIAAAD9//f/AAAFAAQAAAD+//b/AAAHAAIAAAD+//f/AAAGAAQAAAD///b/AAAHAAIAAAD///f/AAAGAAQAAAAAAPb/AAAHAAIAAAAAAPf/AAAGAAQAAAABAPb/AAAHAAIAAAABAPf/AAAFAAQAAAACAPb/AAAHAAIAAAACAPf/AAAFAAQAAAADAPb/AAAHAAIAAAADAPf/AAAFAAQAAAAEAPb/AAAHAAIAAAAEAPf/AAAGAAQAAAAFAPb/AAAHAAIAAAAFAPf/AAAFAAQAAAAGAPb/AAAHAAIAAAAGAPf/AAAHAAIABAAHAPb/AAAHAAIAAAAHAPf/AAAHAAIAAAAHAPj/AAAGAAQAAAAIAPb/AAAHAAIAAAAIAPf/AAAHAAIAAAAIAPj/AAAFAAQAAAAJAPb/AAAHAAIAAAAJAPf/AAAHAAIAAAAJAPj/AAAGAAQAAAAKAPb/AAAHAAIAAAAKAPf/AAAHAAIAAAAKAPj/AAAHAAQAAAALAPb/AAAHAAIAAAALAPf/AAAGAAQAAAAMAPb/AAAHAAIAAAAMAPf/AAAFAAQAAAANAPb/AAAHAAIAAAANAPf/AAAGAAQAAAAOAPb/AAAHAAQAAQAOAPf/AAAHAAQAAAD2//X/AAAEAAMAAAD3//X/AAAGAAMAAAD4//X/AAAFAAMAAAD5//X/AAAFAAMAAAD6//X/AAAGAAMAAAD7//X/AAAFAAMAAAD8//X/AAAGAAMAAAD9//X/AAAGAAMAAAD+//X/AAAFAAMAAAD///X/AAAGAAMAAAAAAPX/AAAGAAMAAAABAPX/AAAFAAMAAAACAPX/AAAGAAMAAAADAPX/AAAFAAMAAAAEAPX/AAAGAAMAAAAFAPX/AAAGAAMAAAAGAPX/AAAGAAMAAAAHAPX/AAAFAAMAAAAIAPX/AAAGAAMAAAAJAPX/AAAFAAMAAAAKAPX/AAAFAAMAAAALAPX/AAAFAAMAAAAMAPX/AAAFAAMAAAANAPX/AAAFAAMAAAAOAPX/AAAHAAMAAAD5//v/AAAEAAMAAAD6//v/AAAGAAMAAAD7//v/AAAFAAMAAAD8//v/AAAHAAMAAAAGAPj/AAAEAAQAAAACAP7/AAAGAAMAAAABAP7/AAAGAAMAAAAAAP7/AAAEAAMAAAAEAP//AAAFAAMAAAADAP//AAAHAAIAAgAHAP7/AAAEAAMAAAADAP7/AAAHAAMAAAA=")
tile_set = ExtResource("1_botvl")

[node name="TriggerHurt" type="Area2D" parent="."]
position = Vector2(128, -16)
collision_layer = 0
collision_mask = 2
gravity_space_override = 3
gravity_point_center = Vector2(-1, -0.05)
gravity_direction = Vector2(-1, -0.05)
gravity = 8000.0
script = ExtResource("2_xik0a")
metadata/_custom_type_script = "uid://jfyby71sefyu"

[node name="Shape" type="CollisionShape2D" parent="TriggerHurt"]
position = Vector2(-30.161, -5.68767)
rotation = -0.223626
shape = SubResource("RectangleShape2D_aafx2")
debug_color = Color(0.7, 0, 0.0116665, 0.419608)

[node name="Tileset1" type="Sprite2D" parent="TriggerHurt"]
position = Vector2(-3, -13)
texture = ExtResource("3_aafx2")
region_enabled = true
region_rect = Rect2(21, 32, 22, 16)

[node name="Tileset3" type="Sprite2D" parent="TriggerHurt"]
position = Vector2(-35, -5)
texture = ExtResource("3_aafx2")
region_enabled = true
region_rect = Rect2(21, 32, 22, 16)

[node name="Tileset4" type="Sprite2D" parent="TriggerHurt"]
position = Vector2(-53, 1)
texture = ExtResource("3_aafx2")
region_enabled = true
region_rect = Rect2(21, 32, 22, 16)

[node name="Tileset2" type="Sprite2D" parent="TriggerHurt"]
position = Vector2(-17, -6)
texture = ExtResource("3_aafx2")
region_enabled = true
region_rect = Rect2(21, 32, 22, 16)

[node name="Merisuolakurkku" type="Sprite2D" parent="."]
position = Vector2(-62, -74)
texture = ExtResource("11_6yij1")
